# loopicide

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
demo/: demo.ipynb
loopicide/: __init__.py  __main__.py  _version.py  loops.py
