[metadata]
name = loopicide
url = https://github.com/jacksonjacobs1/loopicide
download_url = https://github.com/jacksonjacobs1/loopicide
license = MIT
license_file = LICENSE
description = HistoQC is an open-source quality control tool for digital pathology slides
long_description = file: README.md
long_description_content_type = text/markdown
author = Jackson Jacobs
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages =
    loopicide
python_requires = >=3.7
install_requires =
    numpy==1.26.4
    shapely==2.0.2

[options.entry_points]
console_scripts =
    run_module = loopicide.__main__:main